Добавляет функционал поиска стран и отображения результата

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,10 @@
 </head>
 
 <body>
-
+  <div class="toolbar">
+    <input type="search" name="name" id="searchInput" placeholder="Type the country name for search">
+  </div>
+  <div class="container"></div>
 </body>
 
 </html>
