Добавил анимацию ожидания ответа

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,8 @@
   <div class="toolbar">
     <input type="search" name="name" id="searchInput" placeholder="Type the country name for search">
   </div>
-  <div class="container"></div>
+  <div class="container "></div>
+  <div id='loader' class="loader hide"></div>
 </body>
 
 </html>
