--- a/src/index.html
+++ b/src/index.html
@@ -10,9 +10,9 @@
 
 <body>
   <div class="toolbar">
-    <input type="search" name="name" id="searchInput" placeholder="Type the country name for search">
+    <input type="search" name="name" id="searchInput" class="search-bar" placeholder="Type the country name for search">
   </div>
-  <div class="container "></div>
+  <div class="container"></div>
   <div id='loader' class="loader hide"></div>
 </body>
 
